<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.itesm.tiroparabolico.MenuActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logoprepanetsolo"
        android:layout_marginTop="35dp"
        android:id="@+id/image_prepanet"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:id="@+id/text_login"
        android:layout_below="@+id/image_prepanet"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/buttonText_simulador"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_simulador" />

    <Button
        android:text="@string/buttonText_instruciones"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/button_instruciones"
        android:layout_below="@+id/button_simulador"
        android:layout_alignLeft="@+id/button_simulador"
        android:layout_alignStart="@+id/button_simulador" />

    <Button
        android:text="@string/buttonText_creditos"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/button_creditos"
        android:layout_below="@+id/button_instruciones"
        android:layout_alignLeft="@+id/button_instruciones"
        android:layout_alignStart="@+id/button_instruciones" />

    <Button
        android:text="@string/buttonText_logout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:id="@+id/button_logout" />
</RelativeLayout>
